# nostrcli

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: codecov.yml  pre-commit.yml  python-package.yml  python-publish.yml
doc/: setuptools_scm.md
nostr/: bech32.py  cli.py  delegation.py  event.py  filter.py  key.py  message_pool.py  message_type.py  pow.py  relay.py  relay_manager.py  request.py  subscription.py  utils.py
nostr/commands/: README.md  config.py  key.py  message.py
test/: README.md  requirements.txt  test_bech32.py  test_cli.py  test_event.py  test_filter.py  test_key.py  test_message_pool.py  test_pow.py  test_relay_manager.py  test_request.py  test_subscription.py
test/commands/: test_cli_key.py  test_cli_message.py  test_cli_message_with_config.py  test_config.py  test_key.py  test_message.py
test/fixtures/: config.hcl
